# LoRAPID

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: ablation.ipynb  ablation.py  model-usage.ipynb  model-usage.py  model_usage-2.ipynb
scripts/: extract_metrics.py  train_mask2former.py  train_segformer.py  train_segformer_lora.py
src/: __init__.py
src/lorapid/: __init__.py  metrics.py
src/lorapid/data/: kvasir_seg.py
src/lorapid/models/: segformer.py
src/models/: segformer.py
src/segpeft/: __init__.py  metrics.py
src/segpeft/data/: kvasir_seg.py
src/segpeft/models/: mask2former.py
