[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lorapid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=1.4.18",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
